--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,24 +12,39 @@
         app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:title="@string/app_name">
         <LinearLayout
-            android:gravity="left"
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="1">
         <ImageView
+            android:layout_weight="0.09"
             android:id="@+id/ivRefreash"
             android:layout_gravity="center"
-            android:layout_width="34dp"
+            android:layout_width="0dp"
             android:layout_height="34dp"
             android:background="@drawable/ic_refresh_black_24dp"/>
             <TextView
-                android:layout_margin="18dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/app_name"
+                android:gravity="center_horizontal"
+                android:layout_weight="0.8"
+                android:layout_margin="10dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:text="@string/app_survay"
                 android:textColor="#fff"
-                android:textSize="16dp"/>
+                android:textSize="26dp"
+                android:textStyle="bold"/>
+
+
+            <ImageView
+                android:layout_margin="10dp"
+                android:layout_weight="0.1"
+                android:layout_gravity="center"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_drag_handle_black_24dp"/>
         </LinearLayout>
+
         </android.support.v7.widget.Toolbar>
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
