--- a/app/src/main/res/layout/adapter_main_pager_layout.xml
+++ b/app/src/main/res/layout/adapter_main_pager_layout.xml
@@ -5,19 +5,24 @@
 
 
     <com.android.volley.toolbox.NetworkImageView
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:id="@+id/nivSurvay"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/holo_red_light"/>
+        android:background="@android:color/white"/>
     <Button
-        android:layout_centerInParent="true"
         android:gravity="center"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="SurvaySurvaySurvay"
+        android:text="@string/take_the_survay"
+        android:textSize="15dp"
+        android:textStyle="normal"
         android:id="@+id/btSurvay"
         android:textColor="#fff"
-        android:background="@color/colorPrimaryDark"/>
+        android:background="@drawable/rounded_button"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="85dp"
+        android:textAllCaps="false"/>
 
 </RelativeLayout>
