--- a/app/src/main/res/layout/fragment_custom_pagerview.xml
+++ b/app/src/main/res/layout/fragment_custom_pagerview.xml
@@ -9,10 +9,10 @@
         android:layout_height="match_parent" />
 
     <custom_pager_view.CircularIndicator
+        android:layout_marginTop="@dimen/margin_52"
         android:id="@id/indicator"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_gravity="bottom"
-        android:layout_marginBottom="48dp"/>
+        android:layout_height="@dimen/margin_300"
+        android:layout_gravity="center"/>
 
 </FrameLayout>
