--- a/app/src/main/res/layout/toolbar_general.xml
+++ b/app/src/main/res/layout/toolbar_general.xml
@@ -18,9 +18,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
-            android:id="@+id/ivBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/ivRefreash"
+            android:layout_width="34dp"
+            android:layout_height="34dp"
             android:layout_marginLeft="@dimen/margin_7"
             android:layout_centerVertical="true"
             app:srcCompat="@drawable/ic_refresh_black_24dp"
@@ -111,26 +111,5 @@
                 app:srcCompat="@drawable/ic_menu_share" />
 
         </LinearLayout>
-        <LinearLayout
-            android:visibility="gone"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
-            android:id="@+id/llLanguagefilter"
-            android:background="@color/colorAccent"
-            android:gravity="center"
-            android:layout_alignTop="@+id/ivLogo"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_margin="@dimen/dimen_3"
-            android:layout_marginRight="@dimen/dimen_9">
-
-            <ImageView
-                android:padding="@dimen/dimen_3"
-                android:id="@+id/ivMyNews"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                app:srcCompat="@drawable/ic_menu_camera" />
-        </LinearLayout>
-
     </RelativeLayout>
 </android.support.v7.widget.Toolbar>
