--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,10 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar_general" />
-    <Button
-        android:id="@+id/btMain"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:visibility="gone"/>
-
     <ProgressBar
         android:visibility="gone"
         android:layout_gravity="center"
-        android:id="@+id/pbMain"
+        android:id="@+id/mProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
