--- a/app/src/main/res/layout/toolbar_general.xml
+++ b/app/src/main/res/layout/toolbar_general.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
-            android:id="@+id/ivRefreash"
+            android:id="@+id/mIVRefreash"
             android:layout_width="34dp"
             android:layout_height="34dp"
             android:layout_marginLeft="@dimen/margin_7"
@@ -30,7 +30,7 @@
         <TextView
             android:layout_marginTop="@dimen/margin_12"
             android:gravity="center"
-            android:id="@+id/tvTitle"
+            android:id="@+id/mTVTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
@@ -41,7 +41,7 @@
             android:layout_centerHorizontal="true" />
 
         <ImageView
-            android:id="@+id/ivNav"
+            android:id="@+id/mIVNav"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_reorder_black_24px"
@@ -51,65 +51,5 @@
             android:layout_alignParentEnd="true"
             android:layout_marginRight="13dp"
             android:layout_marginEnd="13dp" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:id="@+id/tvRight"
-            android:layout_alignTop="@+id/tvTitle"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:textColor="@color/blue"
-            android:textSize="@dimen/text_size_16"
-            android:layout_marginRight="@dimen/margin_16"
-            android:visibility="gone"/>
-        <TextView
-            android:id="@+id/tvAllbadges"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black_87"
-            android:textSize="@dimen/text_size_16"
-            android:text="Available Badges"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="9dp"
-            android:layout_marginEnd="9dp"
-            android:visibility="gone"/>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:visibility="gone">
-            <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/ivSearch"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:alpha="0.54"
-                android:focusable="true"
-                android:nextFocusLeft="@+id/ivMenu"
-                android:nextFocusRight="@+id/ivNotification"
-                android:background="@drawable/white_selector_trans"
-                android:padding="@dimen/margin_5"
-                app:srcCompat="@drawable/ic_menu_gallery"
-                android:transitionName="search_view"
-                android:visibility="visible"/>
-            <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/ivMore"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginLeft="@dimen/margin_8"
-                android:layout_marginRight="@dimen/margin_4"
-                android:alpha="0.54"
-                android:focusable="true"
-                android:nextFocusLeft="@+id/ivNotification"
-                android:background="@drawable/white_selector_trans"
-                android:padding="@dimen/margin_5"
-                app:srcCompat="@drawable/ic_menu_share" />
-
-        </LinearLayout>
     </RelativeLayout>
 </android.support.v7.widget.Toolbar>
